开发中 修改多选题只能答一次

--- a/pages/answer/index/index.wxml
+++ b/pages/answer/index/index.wxml
@@ -63,6 +63,7 @@
                 size="normal"
                 data-ind="{{index}}"
                 bind:click="handleMultipleChoice"
+                disabled="{{item.result!==null}}"
               >完成</van-button>
             </view>
           </view>
