--- a/pages/tabbar/course-ware/index.wxml
+++ b/pages/tabbar/course-ware/index.wxml
@@ -56,7 +56,7 @@
               <list-item
                 wx:for="{{ item.list }}"
                 wx:key="index"
-                mode
+                mode="{{ item }}"
               ></list-item>
             </view>
           </scroll>
