--- a/wxs/utils.wxs
+++ b/wxs/utils.wxs
@@ -2,7 +2,7 @@
  * @Author: yukang 1172248038@qq.com
  * @Description:工具类
  * @Date: 2021-01-06 13:07:47
- * @LastEditTime: 2021-01-14 23:03:42
+ * @LastEditTime: 2021-01-15 00:35:24
  */
 /* eslint-disable */
 var bem = require("./bem.wxs");
@@ -21,10 +21,20 @@ var zeroFill = function (val) {
   return val < 10 ? "0" + val : val;
 };
 
+var slice = function (val, end, start = 0) {
+  return val.slice(start, end);
+};
+
+var baseUrl = function (val) {
+  return "http://47.101.210.167:9999/" + val;
+};
+
 module.exports = {
   bem: memoize(bem),
   memoize: memoize,
   addUnit: addUnit,
   includes: includes,
   zeroFill: zeroFill,
+  slice: slice,
+  baseUrl: baseUrl,
 };
