--- a/components/list-item/index.wxml
+++ b/components/list-item/index.wxml
@@ -2,19 +2,19 @@
  * @Author: yukang 1172248038@qq.com
  * @Description: 
  * @Date: 2021-01-06 15:08:29
- * @LastEditTime: 2021-01-15 00:25:50
+ * @LastEditTime: 2021-01-16 16:29:44
 -->
 <wxs src="../../wxs/utils.wxs" module="utils" />
 <navigator
   class="list-item u-flex u-row-between van-hairline--bottom"
-  url="/pages/index/detail"
+  url="/pages/home/detail/index?id={{mode.id}}"
   hover-class="u-cell-hover"
 >
   <view class="list-item__left">
     <view class="list-item__left__title van-multi-ellipsis--l3">
       {{ mode.title }}
     </view>
-    <view> {{ mode.author }} {{utils.slice(mode.create_time,16)}}</view>
+    <view> {{ mode.author }} {{utils.slice(mode.create_time,10)}}</view>
   </view>
   <view class="list-item__right">
     <van-image
