--- a/pages/profile/files/components/profile-block/index/index.scss
+++ b/pages/profile/files/components/profile-block/index/index.scss
@@ -13,6 +13,9 @@
     &__title {
       font-size: 28rpx;
       font-weight: bold;
+      text {
+        margin-right: 20rpx;
+      }
     }
     &__tag {
       font-size: 24rpx;
