--- a/pages/profile/files/edit-info/index.wxss
+++ b/pages/profile/files/edit-info/index.wxss
@@ -12,6 +12,16 @@
   margin: 200rpx 30rpx 0;
 }
 
+.edit-info__uploader {
+  margin: 20rpx;
+}
+
+.edit-info__uploader__title {
+  color: #646566;
+  font-size: 26rpx;
+  margin-bottom: 20rpx;
+}
+
 .edit-info__textarea {
   color: #323233;
 }
