--- a/pages/profile/files/index.wxml
+++ b/pages/profile/files/index.wxml
@@ -2,13 +2,34 @@
  * @Author: yukang 1172248038@qq.com
  * @Description: 我的档案
  * @Date: 2021-01-09 17:44:24
- * @LastEditTime: 2021-01-09 19:23:33
+ * @LastEditTime: 2021-01-17 09:16:00
 -->
 <container class="files" is-gray>
-  <profile-header />
-  <profile-block show-jump="{{false}}" bind:click="handleAddInfo" />
-  <profile-block bindtap="handleAddProject" icon="add-o" />
-  <profile-block type="{{2}}" bindtap="handleAddProject" icon="add-o" />
+  <profile-header mode="{{resume}}" />
+  <profile-block mode="{{info}}" show-jump="{{false}}" title="个人介绍" bind:click="handleAddInfo" />
+  <profile-block mode="{{resume.projects}}" icon="add-o" title="项目经历" bindtap="handleAddProject" />
+  <profile-block mode="{{resume.edus}}" icon="add-o" title="教育经历" bindtap="handleAddProject" />
+  <profile-block
+    mode="{{resume.certs}}"
+    type="{{2}}"
+    icon="add-o"
+    title="资格证书"
+    bindtap="handleAddProject"
+  />
+  <profile-block
+    mode="{{resume.honors}}"
+    type="{{2}}"
+    icon="add-o"
+    title="获得荣誉"
+    bindtap="handleAddProject"
+  />
+  <profile-block
+    mode="{{resume.thesis}}"
+    type="{{2}}"
+    icon="add-o"
+    title="发布论文"
+    bindtap="handleAddProject"
+  />
 
   <view class="files__btn">
     <van-button type="primary" block>保存</van-button>
