--- a/pages/profile/files/index.wxml
+++ b/pages/profile/files/index.wxml
@@ -2,12 +2,12 @@
  * @Author: yukang 1172248038@qq.com
  * @Description: 我的档案
  * @Date: 2021-01-09 17:44:24
- * @LastEditTime: 2021-01-17 09:16:00
+ * @LastEditTime: 2021-01-17 12:34:39
 -->
 <container class="files" is-gray>
   <profile-header mode="{{resume}}" />
   <profile-block mode="{{info}}" show-jump="{{false}}" title="个人介绍" bind:click="handleAddInfo" />
-  <profile-block mode="{{resume.projects}}" icon="add-o" title="项目经历" bindtap="handleAddProject" />
+  <profile-block mode="{{resume.projects}}" icon="add-o" title="项目经历" bind:click="handleAddProject" bind:update='handleUpdateProject'/>
   <profile-block mode="{{resume.edus}}" icon="add-o" title="教育经历" bindtap="handleAddProject" />
   <profile-block
     mode="{{resume.certs}}"
