--- a/pages/teacher/student-skill/index.wxml
+++ b/pages/teacher/student-skill/index.wxml
@@ -2,13 +2,13 @@
  * @Author: yukang 1172248038@qq.com
  * @Description: 我的技能
  * @Date: 2021-01-09 17:44:24
- * @LastEditTime: 2021-01-09 20:58:50
+ * @LastEditTime: 2021-02-04 14:05:15
 -->
 <container class="skill">
   <van-search value="{{ keyWorld }}" placeholder="请输入搜索关键词" bind:search="onSearch" />
 
-  <van-dropdown-menu active-color="{{$themeColor}}">
-    <van-dropdown-item value="{{ value }}" options="{{ option1 }}" />
+  <van-dropdown-menu active-color="{{$themeColor}}" >
+    <van-dropdown-item value="{{ postData.prof_id }}" options="{{ prof }}" bind:change='handleChange'/>
   </van-dropdown-menu>
 
   <van-collapse value="{{ activeNames }}" bind:change="onChange">
