--- a/pages/tabbar/home/index.wxml
+++ b/pages/tabbar/home/index.wxml
@@ -2,7 +2,7 @@
  * @Author: yukang 1172248038@qq.com
  * @Description: 
  * @Date: 2021-01-05 22:43:08
- * @LastEditTime: 2021-01-09 21:28:56
+ * @LastEditTime: 2021-02-04 21:27:22
 -->
 <!-- * @Author: yukang 1172248038@qq.com
  * @Description: 首页
@@ -60,7 +60,7 @@
               <list-item
                 wx:for="{{ item.list }}"
                 wx:key="index"
-                mode
+                mode="{{ item }}"
               ></list-item>
             </view>
           </scroll>
