--- a/pages/teacher/student-skill/index.scss
+++ b/pages/teacher/student-skill/index.scss
@@ -6,7 +6,7 @@
   margin-left: 10px;
 }
 .panel {
-  border: 1rpx solid #ebedf0;
+  border: 1rpx dashed #ebedf0;
   margin: 25rpx;
   border-radius: 6rpx;
 }
