--- a/components/list-item/index.wxml
+++ b/components/list-item/index.wxml
@@ -2,14 +2,11 @@
  * @Author: yukang 1172248038@qq.com
  * @Description: 
  * @Date: 2021-01-06 15:08:29
- * @LastEditTime: 2021-01-16 16:29:44
+ * @LastEditTime: 2021-02-20 20:01:09
 -->
 <wxs src="../../wxs/utils.wxs" module="utils" />
-<navigator
-  class="list-item u-flex u-row-between van-hairline--bottom"
-  url="/pages/home/detail/index?id={{mode.id}}"
-  hover-class="u-cell-hover"
->
+<navigator class="list-item u-flex u-row-between van-hairline--bottom" url="/pages/home/detail/index?id={{mode.id}}"
+  hover-class="u-cell-hover">
   <view class="list-item__left">
     <view class="list-item__left__title van-multi-ellipsis--l3">
       {{ mode.title }}
@@ -17,11 +14,7 @@
     <view> {{ mode.author }} {{utils.slice(mode.create_time,10)}}</view>
   </view>
   <view class="list-item__right">
-    <van-image
-      width="100%"
-      height="150rpx"
-      :src="{{utils.baseUrl(cover_pic)}}"
-      border-radius="10"
-    ></van-image>
+    <van-image width="100%" height="150rpx" fit='contain' src="{{utils.baseUrl(mode.cover_pic)}}" border-radius="10">
+    </van-image>
   </view>
 </navigator>
