--- a/pages/teacher/student-list/index.wxml
+++ b/pages/teacher/student-list/index.wxml
@@ -4,7 +4,7 @@
  * @Date: 2021-01-06 18:00:03
  * @LastEditTime: 2021-02-19 09:37:37
 -->
-<view wx:if='{{isLogin}}'>
+<view wx:if='{{isLogin&&show}}'>
   <van-search value="{{ value }}" placeholder="请输入搜索关键词" show-action bind:search="onSearch" bind:cancel="onCancel" use-action-slot background="#f1f1f1">
     <view slot="action" bind:tap="onClick" class="u-flex u-col-center">
       <van-icon name="scan" size="45rpx" color='{{$themeColor}}' />
