--- a/pages/answer/index/index.wxml
+++ b/pages/answer/index/index.wxml
@@ -2,7 +2,7 @@
  * @Author: yukang 1172248038@qq.com
  * @Description:开始考试
  * @Date: 2021-01-08 18:19:16
- * @LastEditTime: 2021-02-21 10:31:14
+ * @LastEditTime: 2021-02-21 11:19:00
 -->
 <wxs src="../../../wxs/utils.wxs" module="utils" />
 <van-notify id="van-notify" />
@@ -11,7 +11,7 @@
   <view class="answer">
     <van-tabs active="{{ active }}" bind:change="handleChange" type="card" color="{{$themeColor}}">
       <van-tab title="答题模式"></van-tab>
-      <van-tab title="背题模式" wx:if='{{params.api!=="getTests"}}'></van-tab>
+      <van-tab title="背题模式" wx:if="{{params.api!=='getTests'}}"></van-tab>
     </van-tabs>
 
     <swiper
@@ -47,6 +47,12 @@
                 checked-color="{{$themeColor}}"
                 custom-class="answer__swipe-item__checkbox"
               ></van-checkbox>
+              <van-checkbox
+                value="{{utils.includes(item.res,it.name)}}"
+                wx:else
+                checked-color="{{$themeColor}}"
+                custom-class="answer__swipe-item__checkbox"
+              ></van-checkbox>
               {{it.name}}
               {{it.content}}
               <van-icon
@@ -59,7 +65,7 @@
             </view>
 
             <view
-              class="answer__swipe_btn u-flex u-row-between"
+              class="answer__swipe_btn u-flex {{(swiperCurrent!==(total-1)||swiperCurrent)&&!active?'u-row-between':'u-row-center'}}"
             >
               <van-button
                 type="primary"
@@ -81,6 +87,7 @@
                 type="primary"
                 custom-class="btn"
                 size="normal"
+                wx:if="{{swiperCurrent!==(total-1)}}"
                 bind:click="handleNext"
               >下一题</van-button>
             </view>
