开发中 修改已知问题

--- a/pages/teacher/student-list/index.wxml
+++ b/pages/teacher/student-list/index.wxml
@@ -2,9 +2,9 @@
  * @Author: yukang 1172248038@qq.com
  * @Description: 
  * @Date: 2021-01-06 18:00:03
- * @LastEditTime: 2021-02-19 09:37:37
+ * @LastEditTime: 2021-02-21 12:19:07
 -->
-<view wx:if='{{isLogin&&show}}'>
+<view wx:if='{{isTeacher&&isLogin}}'>
   <van-search value="{{ value }}" placeholder="请输入搜索关键词" show-action bind:search="onSearch" bind:cancel="onCancel" use-action-slot background="#f1f1f1">
     <view slot="action" bind:tap="onClick" class="u-flex u-col-center">
       <van-icon name="scan" size="45rpx" color='{{$themeColor}}' />
