开发中 修改已知问题

--- a/pages/tabbar/answer/index.scss
+++ b/pages/tabbar/answer/index.scss
@@ -1,5 +1,8 @@
 @import "../../../assets/css/variables";
 .answer {
+  .van-sidebar {
+    min-width: 90px;
+  }
   &__box {
     width: 100%;
     padding: $padding-md;
