--- a/pages/tabbar/answer/index.wxml
+++ b/pages/tabbar/answer/index.wxml
@@ -2,7 +2,7 @@
  * @Author: yukang 1172248038@qq.com
  * @Description: 答题
  * @Date: 2021-01-05 22:40:10
- * @LastEditTime: 2021-02-04 15:56:36
+ * @LastEditTime: 2021-02-21 19:11:40
 -->
 <container class="answer">
   <van-tabs
@@ -23,7 +23,11 @@
       tab-active-class="home__tab__active"
     >
       <view class="u-flex u-col-top" wx:if="{{item.modules.length}}">
-        <van-sidebar active-key="{{ activeKey }}" bind:change="onChange">
+        <van-sidebar
+          active-key="{{ activeKey }}"
+          bind:change="onChange"
+          custom-class="answer__sidebar"
+        >
           <van-sidebar-item title="{{item.name}}" wx:for="{{item.modules}}" wx:key="id" />
         </van-sidebar>
         <view class="answer__box u-flex u-row-between u-flex-wrap">
