--- a/wxs/utils.wxs
+++ b/wxs/utils.wxs
@@ -2,7 +2,7 @@
  * @Author: yukang 1172248038@qq.com
  * @Description:工具类
  * @Date: 2021-01-06 13:07:47
- * @LastEditTime: 2021-01-17 10:03:53
+ * @LastEditTime: 2021-02-21 19:41:21
  */
 /* eslint-disable */
 var bem = require("./bem.wxs");
@@ -22,7 +22,7 @@ var zeroFill = function (val) {
 };
 
 var slice = function (val, end, start = 0) {
-  return val.slice(start, end);
+  return val && val.slice(start, end);
 };
 
 var baseUrl = function (val) {
