--- a/pages/answer/form/index.wxml
+++ b/pages/answer/form/index.wxml
@@ -2,15 +2,15 @@
  * @Author: yukang 1172248038@qq.com
  * @Description: 填写信息
  * @Date: 2021-01-09 14:41:05
- * @LastEditTime: 2021-02-04 22:48:34
+ * @LastEditTime: 2021-02-24 22:24:04
 -->
-<van-notify id="van-notify" />
+<van-dialog id="van-dialog" />
 <container class="form">
-  <van-notice-bar
+  <!-- <van-notice-bar
   left-icon="volume-o"
   text="判断题/单选题/多选题总共不能大于100道题,一道题1分。"
   mode="closeable"
-/>
+/> -->
   <van-cell-group>
     <van-field
       type="number"
@@ -18,6 +18,15 @@
       model:value="{{ judge_count }}"
       placeholder="请输入判断题数量"
       required
+      clearable
+    />
+    <van-field
+      type="number"
+      label="判断题分值"
+      model:value="{{ judge_score }}"
+      placeholder="请输入判断每题分值"
+      required
+      clearable
     />
     <van-field
       type="number"
@@ -25,6 +34,15 @@
       model:value="{{ radio_count }}"
       placeholder="请输入单选题数量"
       required
+      clearable
+    />
+    <van-field
+      type="number"
+      label="单选题分值"
+      model:value="{{ radio_score }}"
+      placeholder="请输入单选每题分值"
+      required
+      clearable
     />
     <van-field
       type="number"
@@ -32,13 +50,23 @@
       model:value="{{ check_count }}"
       placeholder="请输入多选题数量"
       required
+      clearable
     />
+    <van-field
+    type="number"
+    label="多选题分值"
+    model:value="{{ check_score }}"
+    placeholder="请输入多选每题分值"
+    required
+    clearable
+  />
     <van-field
       type="number"
       label="考试时间"
       model:value="{{ time }}"
       placeholder="请输入考试时间 单位(分钟)"
       required
+      clearable
     />
   </van-cell-group>
 
