--- a/pages/profile/qr-code/index.wxml
+++ b/pages/profile/qr-code/index.wxml
@@ -2,11 +2,12 @@
  * @Author: yukang 1172248038@qq.com
  * @Description: 我的二维码
  * @Date: 2021-01-09 17:44:24
- * @LastEditTime: 2021-01-17 08:57:28
+ * @LastEditTime: 2021-02-24 20:18:16
 -->
 <wxs src="../../../wxs/utils.wxs" module="utils" />
 <container class="qr-code">
   <view class="qr-code__content">
+    <!-- bindtap="handleClick" -->
     <view class="qr-code__box">
       <view class="qr-code__box__left-top"></view>
       <view class="qr-code__box__right-top"></view>
@@ -18,7 +19,12 @@
         height="280rpx"
         src="{{utils.baseUrl(qr_path)}}"
         class="qr-code__box__img"
-        bind:click="handleClick"
+      />
+
+      <canvas
+        class="canvas-code"
+        canvas-id="myQrcode"
+        style="background:#fff;width: 100%;height: 100%;"
       />
     </view>
     <view class="qr-code__tip">老师扫码进行技能树审核</view>
