--- a/pages/profile/files/index.wxml
+++ b/pages/profile/files/index.wxml
@@ -2,7 +2,7 @@
  * @Author: yukang 1172248038@qq.com
  * @Description: 我的档案
  * @Date: 2021-01-09 17:44:24
- * @LastEditTime: 2021-01-17 15:02:35
+ * @LastEditTime: 2021-03-01 19:17:17
 -->
 <container class="files" is-gray>
   <profile-header mode="{{resume}}" />
@@ -46,7 +46,7 @@
     bind:update="handleUpdateResumeThesis"
   />
 
-  <view class="files__btn">
+  <!-- <view class="files__btn">
     <van-button type="primary" block>保存</van-button>
-  </view>
+  </view> -->
 </container>
